@@ -1,5 +1,8 @@
 0.19.17	UNRELEASED
 
+ * Don't break when encountering block devices.
+   (Jelmer Vernooĳ)
+
 0.19.16	2020-04-17
 
  * Don't send "deepen None" to server if graph walker
